@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.5.11-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-05-11 07:14:20, took 00:08:01, with 60 workers, on 544 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-05-11 07:45:08, took 00:07:08, with 60 workers, on 544 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
