@@ -15748,3 +15748,6 @@ qc pass: secondary networks over dot1q vlan
 ---------------------------------- 2024-05-11 06:50:36 24.5.11
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-05-11 07:24:54 24.5.11
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
